# rpm-build

./: rpm-build-makecleanskiplist.patch  rpm-build-report-short.md
rpm-build-9b20cf5/: .gitignore  Doxyfile.in  Makefile.am  README.ALT-ru_RU.UTF-8  build.c  configure.ac  installplatform  macros.in  platform.in  rpm-4_0.spec  rpmqv.c  rpmrc.in  system.h
rpm-build-9b20cf5/autodeps/: Makefile.am  autodep-functions.in  cpp.req.in  debuginfo.prov.in  debuginfo.req.in  files.req.files.in  files.req.in  find-provides.in  find-requires.in  find-scriptlet-requires.in  lib.prov.in  lib.req.in  pam.prov.in  pam.req.in  pkgconfig.req.in  pkgconfiglib.req.in  rpmlib.req.in  shebang.req.in  shell.prov.in  shell.req.in  static.req.in  symlinks.req.in  systemd-services.req.files  systemd-services.req.in  sysusers.prov.files  sysusers.prov.in
rpm-build-9b20cf5/doc/: rpmbuild.8
rpm-build-9b20cf5/doc/manual/: macros
rpm-build-9b20cf5/lib/: closeall.c  misc.c  rpmcli.h  rpmlib.h  rpmlibprov.c  rpmrc.c  set.c  transaction.c
rpm-build-9b20cf5/rpmdb/: db3.c  rpmdb.c  rpmvercmp.c
rpm-build-9b20cf5/rpmio/: Makefile.am  base64.c  macro.c  rpmio.c  rpmio_internal.h  rpmpgp.c  rpmrpc.c
rpm-build-9b20cf5/scripts/: .provides.sh  Makefile.am  brp-adjust_libraries.in  brp-alt.in  brp-check_contents.in  brp-cleanup.in  brp-compress.in  brp-debuginfo.in  brp-dupe-bin.in  brp-fix-perms.in  brp-fixup.in  brp-sign-kmodules.in  brp-strip-lto.in  brp-verify-info.in  brp-verify-unit.in  brp-verify_elf.in  check  compress_files.in  find-debuginfo-files.in  find-lang.in  fixup-binconfig.in  fixup-desktop.in  fixup-gnuconfig  fixup-libraries.in  fixup-libtool.in  fixup-pkgconfig.in  install  ldd.in  makecleanskiplist  percolate.in  process-debuginfo.in  process-lto.in  provided_symbols  rpmb-find-package.in  rpmb-functions.in  strip  verify-elf.in
rpm-build-9b20cf5/tools/: Makefile.am  mksysusers.c  remappath2.c  test_rpmvercmp.c
